# cockpituous

./: .gitignore  Dockerfile  Makefile  README  README.md  build-common  build-git  build-koji  centos-ci.md  cockpit-script  make-release  push-container  pyproject.toml  release-copr  release-dockerhub  release-docs  release-github  release-koji  release-runner  release-tarball  tag-message  update-spec
.cockpit-ci/: run
ansible/: README.md  bitwarden-ssh-agent.md  openstack-ssh-config
base/: Dockerfile  push-container
biprelay/: Dockerfile  bip.conf
e2e/: README.md  e2e-ssh.config
example/: semaphore-run  testsuite1  testsuite2
files/: Dockerfile  authorized_keys
guide/: Dockerfile  authorized_keys
images/: Dockerfile  README.md  cockpit-images.yaml  generate-image-certs.sh  images-claim.yaml  install-s3-service  install-service  nginx-tls.conf  nginx.conf
irc/: Dockerfile  bip-start  bip.conf  irccat
learn/: Dockerfile  README.md  analyze.py  build-secrets  cluster.py  cockpit-expose.yaml  cockpit-learn.yaml  data-expand  data-github  data.py  extractor.py  gather-tests  gather-tests.sh  github.py  learn-data.yaml  learn-expose.yaml  learn-pod.yaml  lighttpd.conf  ncd.py  nginx.conf  predict-server  predict-tests  test-cluster  test-extractor  test-github  test-predict.jsonl  train-tests
local-s3/: generate-s3-cert.sh  install-s3-service
logs-proxy/: README.md  proxy.yaml  s3-proxy.py
metrics/: README.md  centosci-ci-weather.yaml  cockpit-ci.json  deploy-k8s.sh  deploy-podman.sh  deploy.sh  metrics.yaml  prometheus-claim.yaml
promote/: release-bodhi
release/: Dockerfile  Dockerfile.sh  README  (+35 more)
(+164 files in other folders)
