[project]
name = "cockpituous"
description = "Cockpit CI infrastructure"
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

dependencies = [
    "pyyaml",
]

version = "1"

[project.optional-dependencies]
test = [
    "ruff",
    "mypy",
    "pytest",
    "types-PyYAML",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-m 'not shell'"
markers = [
    "shell: interactive shell for development, skipped on normal runs",
]

[tool.ruff]
exclude = [
    ".git/",
]
line-length = 118
src = []

[tool.ruff.lint]
select = [
    "A",       # flake8-builtins
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "D300",    # pydocstyle: Forbid ''' in docstrings
    "DTZ",     # flake8-datetimez
    "E",       # pycodestyle
    "EXE",     # flake8-executable
    "F",       # pyflakes
    "FBT",     # flake8-boolean-trap
    "G",       # flake8-logging-format
    "I",       # isort
    "ICN",     # flake8-import-conventions
    "ISC",     # flake8-implicit-str-concat
    "PIE",     # flake8-pie
    "PLE",     # pylint errors
    "PGH",     # pygrep-hooks
    "PT",      # flake8-pytest-style
    "RSE",     # flake8-raise
    "RUF",     # ruff rules
    "T10",     # flake8-debugger
    "TCH",     # flake8-type-checking
    "UP032",   # f-string
    "W",       # warnings (mostly whitespace)
    "YTT",     # flake8-2020
]

ignore = [
    "PT001", "PT023", # different versions can't make up their mind how to write decorators
]
